test/test_cases/invalid/syntaxErr/variables/reservedWords2.wacc
# reserved keywords

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  int skip = 2 ;
  skip
end
